<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_profile"
                android:layout_width="148dp"
                android:layout_height="137dp"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.901"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:text="@string/my_name"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img_item_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_item_profile"
                app:layout_constraintVertical_bias="0.349"
                tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_email"
                android:textColor="#fedd06"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="HardcodedText" />


            <ImageView
                android:id="@+id/ic_github"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/github"
                android:src="@drawable/ic_github_logo"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="UnknownId" />

            <ImageView
                android:id="@+id/ic_instagram"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/instagram"
                android:src="@drawable/instagram"
                app:layout_constraintBottom_toBottomOf="@+id/ic_github"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.923"
                tools:ignore="UnknownId" />

            <ImageView
                android:id="@+id/ic_linkedin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/linkedin"
                android:src="@drawable/ic_linkedin"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="701dp"
            android:background="@drawable/bottom_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:textAlignment="center"
                android:textColor="@color/hijau"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:text="@string/about_detail"
                android:textSize="20sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="391dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:textSize="15sp"
                        android:text="@string/name_lengkap" />

                    <TextView
                        android:textSize="15sp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/content_name_lengkap" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:textSize="15sp"
                        android:text="@string/alamat_lengkap" />

                    <TextView
                        android:layout_width="228dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/content_alamat_lengkap"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:textSize="15sp"
                        android:text="@string/domisili" />

                    <TextView
                        android:textSize="15sp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/content_domisili" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="110dp"
                        android:text="@string/student"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="220dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/content_student"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="110dp"
                        android:text="@string/email_dicoding"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="212dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:text="@string/content_email_dicoding"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="112dp"
                        android:layout_height="match_parent"
                        android:text="@string/motivasi"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="212dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:text="@string/content_motivasi"
                        android:textSize="15sp" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>