<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="2000dp"
    android:background="@drawable/background_main"
    android:fillViewport="true"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="310dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="406dp"
                android:layout_height="301dp"
                tools:ignore="MissingConstraints,ImageContrastCheck"
                tools:layout_editor_absoluteY="9dp"
                tools:srcCompat="@drawable/background_main" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2000dp"
            android:background="@drawable/bottom_background1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_set_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Univ_name"
                android:textAlignment="center"
                android:textColor="@color/hijau"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="2000dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="91dp"
                        android:text="@string/alamat_lokasi"
                        android:textColor="#616161"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_item_lokasi"
                        android:text="@string/content_lokasi"
                        android:textColor="#616161"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/detail"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="15sp" />
                </TableRow>

                <TextView
                    android:id="@+id/Univ_detail"
                    android:layout_width="match_parent"
                    android:layout_height="3000dp"
                    android:textColor="@color/black"
                    android:text="@string/content_detail_univ"
                    android:textSize="15sp" />


            </TableLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>